sandbox/output
GildedRoseTest.java:370: error: cannot find symbol
            .filter(GildedRose.isSellInBetween0And5())
                              ^
  symbol:   method isSellInBetween0And5()
  location: class GildedRose
1 error
